# Parallel_prog_lab1

./: 1.cpp  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
